<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="@dimen/padding_default">

    <LinearLayout
        android:id="@+id/linkloss_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/find_linkloss" />

        <com.infineon.airocbluetoothconnect.CommonUtils.CustomSpinner
            android:id="@+id/linkloss_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:prompt="@string/find_spinner_prompt" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary" />

    <LinearLayout
        android:id="@+id/immalert_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_immediate_alert" />

        <com.infineon.airocbluetoothconnect.CommonUtils.CustomSpinner
            android:id="@+id/immediate_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:prompt="@string/find_spinner_prompt" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary" />

    <LinearLayout
        android:id="@+id/transmission_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding_default"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/medium_icon"
            android:layout_height="@dimen/medium_icon"
            android:layout_gravity="center"
            android:contentDescription="@string/image_bluetooth_logo"
            android:src="@drawable/icon_bluetooth"
            app:tint="@color/accent" />

        <TextView
            android:id="@+id/findme_tx_power_txt"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="end" />

        <TextView
            android:id="@+id/findme_tx_power_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/device_signal_strength_unit" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/transmission_rel_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_transmission_background_circle_logo"
            android:src="@drawable/find_me_blue_circle"
            app:tint="@color/accent" />

        <ImageView
            android:id="@+id/findme_tx_power_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_transmission_foreground_circle_logo"
            android:src="@drawable/white_circle2"
            app:tint="@color/background" />
    </RelativeLayout>

</LinearLayout>