<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/padding_default">

    <TextView
        android:id="@+id/promity"
        style="@style/Infineon.TextView.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proximity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top|right"
                android:paddingVertical="0dp"
                android:singleLine="true"
                android:text="@string/proximity_bar_hundred" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="25dp"
                android:layout_weight="1"
                android:gravity="center|right"
                android:singleLine="true"
                android:text="@string/proximity_bar_seventyfive" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|right"
                android:singleLine="true"
                android:text="@string/proximity_bar_fifty" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:gravity="center|right"
                android:singleLine="true"
                android:text="@string/proximity_bar_twentyfive" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|right"
                android:paddingVertical="0dp"
                android:singleLine="true"
                android:text="@string/proximity_bar_zero" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:background="@color/accent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/proximity_bar"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:background="@drawable/proximity_bar"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/proximity_view_1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="255"
                    android:src="@color/background" />

                <ImageView
                    android:id="@+id/proximity_view_2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>