<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:padding="@dimen/padding_default">

    <LinearLayout
        android:id="@+id/parent_add_gls_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gls_carb_id"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gls_carb_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gls_carb_unit"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gls_carb_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gls_meal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gls_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gls_tester"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gls_tester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gls_health"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gls_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gls_exc_duration"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gls_exercise_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gls_exc_intensity"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gls_exercise_intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gls_med_id"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gls_medication_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gls_med"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gls_medication_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gls_hba1c"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gls_hba1c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </LinearLayout>
</ScrollView>